# fast-parse-time

./: .gitignore  .pre-commit-config.yaml  BOUNDARIES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: API.md  functions.md  types.md
fast_parse_time/: __init__.py  api.py  fast_parse_time_api.py
fast_parse_time/bp/: __init__.py  fast_parse_time.py
fast_parse_time/core/: __init__.py
fast_parse_time/dmo/: keyword_sequence_extractor.py  keyword_sequence_filter.py  sequence_solution_finder.py
fast_parse_time/dto/: __init__.py  day_words_kb.py  deictic_words_kb.py  index_by_frame_kb.py  index_by_keyterm_kb.py  index_by_slot_kb.py  keyterm_counter_kb.py  month_words_kb.py  time_words_kb.py
fast_parse_time/engine/svc/: parse_time_references.py
fast_parse_time/explicit/bp/: __init__.py  explicit_time_extractor.py
fast_parse_time/explicit/dmo/: __init__.py  day_month_validator.py  delimited_date_classifier.py  stdlib_date_validator.py
fast_parse_time/explicit/dto/: __init__.py
fast_parse_time/explicit/svc/: __init__.py  classify_numeric_components.py  normalize_text.py  preclassify_numeric_components.py  tokenize_numeric_components.py  validate_numeric_components.py
fast_parse_time/implicit/dmo/: __init__.py  digit_text_replacer.py  keyword_sequence_extractor.py  keyword_sequence_filter.py  sequence_solution_finder.py
fast_parse_time/implicit/dto/: __init__.py  index_by_keyterm_kb.py  index_by_slot_kb.py  keyterm_counter_kb.py
fast_parse_time/implicit/svc/: analyze_time_references.py  resolve_time_references.py
fast_parse_time/runtime/: __init__.py
fast_parse_time/runtime/bp/: __init__.py  fast_parse_time.py
fast_parse_time/runtime/dto/: words_kb.py
fast_parse_time/runtime/svc/: find_time_reference.py
fast_parse_time/svc/: __init__.py  analyze_time_references.py  find_time_reference.py  resolve_time_references.py
python/: pyproject.toml
scripts/: generate_before_marker_kb.py  generate_decade_kb.py  generate_short_units_kb.py  generate_singular_frames_kb.py
tests/: README.md  analyze_time_references_test.py  dateparser_capability_01_test.py  dateparser_capability_02_test.py  delimited_date_classifier_01_test.py  digit_text_replacer_test.py  extract_numeric_dates_01_test.py  resolve_time_references_test.bak  test_analyze_time_references.py  test_boundary_cases.py  test_data_dictionaries.py  test_dateparser_capability_02.py  test_dateparser_capability_03.py  test_decade_unit.py  test_decimal_cardinalities.py  test_delimited_date_classifier_01.py  test_digit_text_replacer.py  test_find_time_reference.py  test_hyphen_month_year.py  test_hyphen_normalization.py  test_informal_expressions.py  test_iso_datetime_range.py  test_named_day_references.py  test_new_api.py  test_ordinal_day_month_no_year.py  test_plural_singular_units.py  test_preclassify_numeric_components_01.py  test_prose_year.py  test_resolve_time_references.py  test_root_imports.py  test_tense_markers_and_singular_frames.py  test_time_of_day_references.py  test_tokenize_numeric_components_02.py  test_transform.py  test_year_range.py  transform_test.bak
tests/compat/: README.md
tests/compat/datefinder/: test_extract_date_strings.py  test_find_dates.py
tests/compat/dateparser/: test_freshness.py
tests/compat/parsedatetime/: test_simple_offsets_hours.py  test_units.py
tests/compat_datefinder/: README.md  test_find_dates_strict.py
tests/compat_dateparser/: README.md  test_explicit_dates.py
tests/compat_parsedatetime/: README.md  test_delta.py  test_phrases.py  test_simple_offsets.py
tests/core/: README.md  test_dateparser_capability_01.py  test_dateparser_capability_02.py  test_delimited_date_classifier_01.py  test_extract_future_references.py  test_extract_numeric_dates_01.py  test_get_date_range.py  test_indefinite_articles.py  test_informal_expressions.py  test_key_behaviors.py  test_last_past_without_number.py  test_named_day_references.py  test_parse_dates_edge_cases.py  test_parse_dates_with_type.py  test_preclassify_numeric_components_01.py  test_relative_time_dataclass.py  test_stdlib_date_validator.py  test_time_of_day_references.py  test_tokenize_numeric_components_01.py  test_word_number_conversion.py  test_written_month_formats.py
tests/core/api/: README.md  test_both_types.py  test_filtering_behavior.py  test_full_explicit_date_filter.py  test_new_api.py  test_no_filter.py  test_no_filter_returns_all_types.py  test_only_explicit_dates.py  test_parse_dates_with_type_sentence_context.py  test_relative_and_explicit_mixed.py  test_return_type.py
tests/core/datetime/: README.md  test_dataclass_fields.py  test_exact_calculations_additional.py  (+15 more)
tests/drivers/: transform_time.py
tests/profile/: find_time_reference_profiler.py
tests/red_team/: README.md  conftest.py  test_rt_compound_multi_unit.py  test_rt_eod_eom_eoy.py  test_rt_hyphen_month_year.py  test_rt_iso8601.py  test_rt_last_next.py  test_rt_numeric_delimited.py  test_rt_prose_year.py  test_rt_quantifiers.py  test_rt_relative_ago_back.py  test_rt_relative_from_now.py  test_rt_special_words.py  test_rt_unicode_and_homoglyphs.py  test_rt_written_cardinals.py  test_rt_written_month.py  test_rt_year_range.py
(+370 files in other folders)
