[project]
name = "fast-parse-time"
version = "1.3.0"
description = "Natural Language (NLP) Extraction of Date and Time"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Craig Trim", email = "craigtrim@gmail.com" },
]
maintainers = [
  { name = "Craig Trim", email = "craigtrim@gmail.com" },
]
keywords = [
  "date-parsing",
  "time-parsing",
  "date-extraction",
  "nlp",
  "natural-language",
  "temporal-extraction",
  "text-mining",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.11.5"
dependencies = [
  "word2number",
]

[project.urls]
Repository = "https://github.com/craigtrim/fast-parse-time"
"Bug Tracker" = "https://github.com/craigtrim/fast-parse-time/issues"

[tool.poetry]
packages = [{ include = "fast_parse_time" }]

[tool.poetry.dependencies]
python = "^3.11.5"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flakeheaven = "*"
plac = "*"
pre-commit = "^2.20.0"
pytest = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
exclude = ["__init__.py", "README.md", "setup.py", ".venv", ".git"]
format = "grouped"
max_line_length = 500
show_source = true

[tool.flakeheaven.plugins]
# F401 (Missing Import)
# F403 (Unable to Detect Undefined Names)
"flake8-*" = ["+*"]
flake8-bandit = ["-*", "+S1??"]
flake8-docstrings = ["-*"]
pyflakes = ["+*", "-F401", "-F403"]
